<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WMS</string>
    <string name="user_name">User name<font color='red'>*</font></string>
    <string name="email">Email<font color='red'>*</font></string>
    <string name="password">Password<font color='red'>*</font></string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="first_name">First Name<font color='red'>*</font></string>
    <string name="last_name">Last Name<font color='red'>*</font></string>
    <string name="date_of_birth">Date of Birth<font color='red'>*</font></string>
    <string name="date_of_birth2">Date of Birth</string>
    <string name="gender">Gender (Optional)</string>
    <string name="confirm_password">Confirm Password<font color='red'>*</font></string>
    <string name="register">Register</string>
    <string name="recover_email">Recover Email</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="alert">Alert</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="phone_number">Phone Number<font color='red'>*</font></string>
    <string name="update_profile">Update Profile</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="my_profile">"My Profile"</string>
    <string name="order_information">"Order Information"</string>
    <string name="order_summary">"Order Summary"</string>
    <string name="clear">Clear Search History</string>
    <string name="search_hint">Search...</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="your_subject">Your Subject</string>
    <string name="your_enquiry">Your Enquiry</string>
    <string name="enter_your_enquiry">Enter Your Enquiry</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="friend_s_email">Friend\'s Email</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="personal_message">Personal Message</string>
    <string name="choose_the_language">Choose the Language</string>
    <string name="enter_name">Name<font color='red'>*</font></string>
    <string name="enter_email">Email<font color='red'>*</font></string>
    <string name="enter_your_location">Your location<font color='red'>*</font></string>
    <string name="mobile_number">Mobile Number<font color='red'>*</font></string>
    <string name="country">Country<font color='red'>*</font></string>
    <string name="state_province">State/Province<font color='red'>*</font></string>
    <string name="pincode">Pincode<font color='red'>*</font></string>
    <string name="address">Address<font color='red'>*</font></string>
    <string name="address2">Address</string>
    <string name="locality_town">Locality/Town<font color='red'>*</font></string>
    <string name="city_district">City/District<font color='red'>*</font></string>
    <string name="action_notification">Notification</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="choose_camera">Choose Camera</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="guest_user_alert">"Please login first to continue!! "</string>
    <string name="cancel">Cancel</string>
    <string name="cantinue">Continue</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Are you sure to delete current photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout_confirmation">Are you sure you want to signout?</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_mobile_no">Enter Mobile No</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="save">Save</string>
    <string name="my_address">My Address</string>
    <string name="my_orders">My Orders</string>
    <string name="orderhistory">Order History</string>
    <string name="return_request">Return Request</string>
    <string name="choose_language">Choose Language</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reward_point">Reward Point</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="deals_of_the_day">Deals of the Day</string>
    <string name="featured_products">Featured Products</string>
    <string name="checkout">Checkout</string>
    <string name="email_a_friend">Email a Friend</string>
    <string name="contact_us">Contact Us</string>
    <string name="compare_list">Compare List</string>
    <string name="my_notification">My Notification</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="legal">Legal</string>
    <string name="logout">Logout</string>
    <string name="return_item_s_from">Return Item\'s From</string>
    <string name="which_items_do_you_want_to_return">Which items do you want to return?</string>
    <string name="unit_price">Unit Price :</string>
    <string name="qty_to_return">Qty. to Return :</string>
    <string name="why_are_you_returning_these_items">Why are you returning these items?</string>
    <string name="return_reason">Return Reason</string>
    <string name="return_reason2">Return Reason :</string>
    <string name="return_action">Return Action</string>
    <string name="return_action2">Return Action :</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_your_files">Upload your files</string>
    <string name="try_to_upload_more_files_to_see_them_here">Try to upload file to see them here</string>
    <string name="submit_return_request">Submit Return Request</string>
    <string name="product_reviews_for">Product Reviews For</string>
    <string name="review_title">Review Title</string>
    <string name="review_text">Review Text</string>
    <string name="rating">Rating</string>
    <string name="bad">Bad</string>
    <string name="excellent">Excellent</string>
    <string name="submit">Submit</string>
    <string name="customer_review">Customer Review</string>
    <string name="view_all">View All</string>
    <string name="method">Method</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="same_as_billing_address">Same as billing address</string>
    <string name="compare_with_similar_items">COMPARE WITH SIMILAR ITEMS</string>
    <string name="email_your_wishlist_to_a_friend">Email your wishlist to a Friend !</string>
    <string name="send_email">Send Email</string>
    <string name="apply">Apply</string>
    <string name="product_found">Product found</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="please_enter_your_email_address_below_you_will_receive_a_link_to_reset_your_password">Please enter your email address below, you will receive a link to reset your password.</string>
    <string name="find_a_language">Find a Language</string>
    <string name="login">Login</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="email_id">Email Id</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_acoount">Don’t have an account ?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="continue_as_guest_user">Login as Guest User</string>
    <string name="showing_all_orders">Showing All Orders</string>
    <string name="filters">Filters</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="order_number">Order Number :</string>
    <string name="order_date">Order Date :</string>
    <string name="order_date2">Order Date </string>
    <string name="order_status">Order Status :</string>
    <string name="order_total">Order Total :</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="total_mrp">Total MRP</string>
    <string name="sub_total_discount">Sub Total Discount</string>
    <string name="shipping_charges">Shipping Charges</string>
    <string name="tax_amp_charges"><![CDATA[Tax & Charges]]></string>
    <string name="total_amount">Total Amount</string>
    <string name="re_order">Re-Order</string>
    <string name="total_order_discount">Total Order Discount</string>
    <string name="gift_discount">Gift Discount</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="price_inclusive_of_all_taxes">Price inclusive of all taxes</string>
    <string name="quantity">Quantity</string>
    <string name="product_details">Product Details</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="please_enter_detail_to_register">Create Account</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="available_offers_10_instant_discount_on_debit_cards">Available Offers 10% instant discount on Debit Cards.</string>
    <string name="apply_coupons">Apply Coupons</string>
    <string name="apply_gift_card">Apply Gift Card</string>
    <string name="place_order">Place Order</string>
    <string name="your_order_has_been_successfully_processed">Your order has been successfully processed</string>
    <string name="payment_amp_shipping_details"><![CDATA[PAYMENT & SHIPPING DETAILS]]></string>
    <string name="order_no">Order No</string>
    <string name="order_amount">Order Amount</string>
    <string name="order_discount">Order Discount</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="update">Update</string>
    <string name="price">Price</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
</resources>